--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Pig Dice Application</title>
     <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
     <link href="css/styles.css" rel="stylesheet" type="text/css">
-    <link href="https://fonts.googleapis.com/css?family=Baloo+Chettan|Baloo+Da|Ravi+Prakash|Righteous" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Ewert|Baloo+Chettan|Baloo+Da|Ravi+Prakash|Righteous" rel="stylesheet">
     <script src="js/jquery-3.1.0.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/scripts.js"></script>
@@ -25,7 +25,10 @@
       </div>
     </nav>
     <div class="container">
-
+      <div class="jumbotron" id="title">
+        <img src="img/atLogo.png" alt="Adventure Time Logo" />
+        <h1>Dice Match</h1>
+      </div>
       <div class="jumbotron" id="form_input">
         <div class="row">
           <div class="col-xs-3 left">
@@ -37,7 +40,7 @@
             </div>
           </div>
           <div class="col-xs-6 center">
-            <h1>Pig Dice</h1>
+            <h1></h1>
             <div id="totalOutput">0</div>
             <button id="rollButton" type="button" class="btn btn-info">Roll</button>
             <button id="holdButton"  type="button" class="btn btn-success">Hold</button>
