lots of new stuff

--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
       <div class="jumbotron" id="form_input">
         <div class="row">
           <div class="col-xs-3 left">
-            <h2 id="p1flag">Player 1</h2>
-            <div id="p1ScoreOutput">0</div>
+            <h2 id="RickFlag">Player 1</h2>
+            <div id="RickScore">0</div>
             <div id="p1Wins">
               <img class="img-responsive" src="img/bmo.gif" alt="bmo the robot dancing" />
               <h1>You Win!!!</h1>
@@ -44,13 +44,12 @@
             <div id="totalOutput">0</div>
             <button id="rollButton" type="button" class="btn btn-info">Roll</button>
             <button id="holdButton"  type="button" class="btn btn-success">Hold</button>
-              <p><span id="d1Output">-</span>
-              <span id="d2Output">-</span></p>
+              <p><span id="d1Output">-</span></p>
             <button id="resetButton"  type="button" class="btn btn-danger">Reset Game</button>
           </div>
           <div class="col-xs-3 right">
-            <h2 id="p2flag">Player 2</h2>
-            <div id="p2ScoreOutput">0</div>
+            <h2 id="SteveFlag">Player 2</h2>
+            <div id="SteveScore">0</div>
             <div id="p2Wins">
               <img class="img-responsive" src="img/iceWiz.gif" alt="The Ice Wizard twerking" />
               <h1>You Win!!!</h1>
